<resources>
    <string name="app_name">Taxi QR Reader</string>
    <string name="list">ثبت نام شده ها</string>
    <string name="add">افزودن راننده</string>
    <string name="scan_barcode">اسکن بارکد</string>
    <string name="driver_info">اطلاعات راننده</string>
    <string name="ok">تایید</string>
    <string name="brand">برند</string>
    <string name="model">مدل</string>
    <string name="year">سال تولید</string>
    <string name="usage">کاربری</string>
    <string name="company">شرکت</string>
    <string name="color">رنگ</string>
    <string name="phone_number">شماره ی موبایل</string>
    <string name="taxi_inquiry">استعلام تاکسیرانی</string>
    <string name="driver_code">کد راننده</string>
    <string name="inquiry_alert">به منظور دریافت اطلاعات تاکسی موردنظر \n شماره پلاک خودرو را وارد نموده و تایید را
        بزنید
    </string>
    <string name="clear_form">خالی کردن فرم</string>
    <string name="mobile_alert">شماره موبایل را وارد کنید</string>
    <string name="enter">ورود</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="car_brand">مدل ماشین</string>
    <string name="phone_num">شماره موبایل</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="plate_number">شماره پلاک</string>
    <string name="add_pls">اضافه کن!</string>
    <string name="avatar">آدرس آواتار (اختیاری)</string>
    <string name="first_name">نام</string>
    <string name="necessary_field">پر کردن این فیلد ضروری است!</string>
    <string name="sure_delete">آیا از حذف مطمئنید؟</string>
    <string name="delete_driver">حذف راننده</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="enterVerificationCode">لطفا کد فعال سازی ارسال شده را وارد نمایید.</string>
    <string name="sendVerificationCode">ارسال کد فعال سازی</string>
    <string name="resendButton">ارسال مجدد</string>
    <string name="editPhoneNumber">ویرایش شماره</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="_09xxxxxxxxx">09XXXXXXXXX</string>
</resources>
